[package]
name = "lib-graphics"
version = "0.2.2"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]

[dependencies]
piston = "0.36.0"
piston_window = "0.79.0"
pistoncore-glutin_window = "0.46.0"
piston2d-opengl_graphics = "0.53.0"
piston2d-graphics = "0.26.0"
piston2d-gfx_graphics = "0.51.0"
gfx_device_gl = "0.15.2"
imageproc = "0.15.0"
image = "0.19.0"
num = "*"